# lts-modulus

./: .gitignore  README.md  pyproject.toml  req.txt  requirements.txt  temp1.vtp
.hydra/: config.yaml  hydra.yaml  overrides.yaml
shell_mgn/: custom_loss.py  eda.ipynb  inference.py  meshgraphnet.py  pi_fine_tuning.py  pi_fine_tuning_gnn.py  pi_fine_tuning_old.py  simple_way_up.py  start_sweep.sh  temp.py  test_van_grad.ipynb  test_van_grad.py  train.py  utils.py
shell_mgn/conf/: config.yaml  config_old.yaml  inference_conf.yaml  sweep.yaml
shell_mgn/conf/multi_comp/: config.yaml  sweep.yaml
shell_mgn/conf/single_run_conf/: config.yaml
shell_mgn/datapipe/: shell_dataset.py
src/preprocess/: dataset.py  generate_dataset.py  main.py  read_raw_data.py  utils.py
src/shellmgn/: __init__.py  main.py  utils.py
src/shellmgn/conf/multi_comp/: config.yaml  sweep.yaml
src/shellmgn/conf/single_run_conf/: config.yaml
src/shellmgn/dataloader/: __init__.py  dataloader.py
src/shellmgn/inference/: inference.py
src/shellmgn/losses/: __init__.py  logcosh.py  mrae.py  multi_comp.py  multi_comp_uncertain.py  weighted_logcosh.py
src/shellmgn/models/: __init__.py  meshgraphnet.py
src/shellmgn/trainer/: __init__.py  trainer.py
stokes_mgn/: eda.ipynb  inference.py  pi_fine_tuning.py  pi_fine_tuning_gnn.py  preprocess.py  train.py  train_with_pi_loss.py  utils.py  utils_for_train_with_pi.py
stokes_mgn/conf/: config.yaml
stokes_mgn/raw_dataset/: download_dataset.sh
stokes_mgn_vtp_inp/: graph_9.vtp  graph_9_to_meshio.vtk  output.inp  uscg_1.vtk  vtk_to_inp.py
